update publications + images

--- a/research.html
+++ b/research.html
@@ -89,29 +89,82 @@
 									<!-- <a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a> -->
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
+                                    2023
+                                    </p>
+                                    <p>
                                         <ul>
+                                            <li> <strong>Otto, P.</strong>, Otto, P. (2023): What's in a name? Significance 20(1)<a href="https://doi.org/10.1093/jrssig/qmad010"> (DOI)</a></li>
                                             <li> Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2023): Agrimonia: a dataset on livestock, meteorology and air quality in the Lombardy region, Italy. accepted: nature Scientific Data</li>
                                             <li> Harke, F. H., <strong>Otto, P.</strong> (2023): Solar Self-Sufficient Households as a Driving Factor for Sustainability Transformation. Sustainability 15(3)<a href="https://doi.org/10.3390/su15032734"> (DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        2022
+                                    </p>
+                                    <p>
+                                        <ul>
                                             <li> <strong>Otto, P.</strong>, Schmid, W. (2022): A general framework for spatial GARCH models. Statistical Papers<a href="https://doi.org/10.1007/s00362-022-01357-1"> (DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Steinert, R. (2022): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics<a href="https://doi.org/10.1080/10618600.2022.2107530"> (DOI)</a></li>
                                             <li> Harke, F. H., Merk, M., <strong>Otto, P.</strong> (2022): Estimation of Asymmetric Spatial Autoregressive Dependence on Irregular Lattices. Symmetry 14(7)<a href="https://doi.org/10.3390/sym14071474"> (DOI)</a></li>
                                             <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a></li>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2022): Estimation of the spatial weighting matrix for regular lattice data -- An adaptive lasso approach with cross-sectional resampling. Environmetrics 33(1) <a href="https://doi.org/10.1002/env.2705">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        2021
+                                    </p>
+                                    <p>
+                                        <ul>
                                             <li> <strong>Otto, P.</strong>, Piter, A., Gijsman, R. (2021): Statistical Analysis of Beach Profile Evolution and External Influences: Applying a Spatiotemporal Functional Approach. Coastal Engineering 170 <a href="https://doi.org/10.1016/j.coastaleng.2021.103999">(DOI)</a></li>
                                             <li> Fassò, A., Maranzano, P., <strong>Otto, P.</strong> (2021): Spatiotemporal variable selection and air quality impact assessment of COVID-19 lockdown. Spatial Statistics (online first) <a href="https://doi.org/10.1016/j.spasta.2021.100549">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Schmid, W., Garthoff, R. (2021): Stochastic Properties of Spatial and Spatiotemporal ARCH Models. Statistical Papers 62 <a href="https://doi.org/10.1007/s00362-019-01106-x">(DOI)</a> </li>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2021): Directional spatial autoregressive dependence in the conditional first- and second-order moments. Spatial Statistics 41 <a href="https://doi.org/10.1016/j.spasta.2020.100490">(DOI)</a></li>
                                             <li> Malinovskaya, A., <strong>Otto, P.</strong> (2021): Online network monitoring. Statistical Methods & Applications, Special Issue on Network Modelling 30 <a href="https://doi.org/10.1007/s10260-021-00589-z">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        2020
+                                    </p>
+                                    <p>
+                                        <ul>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2020): Estimation of Anisotropic, Time‐Varying Spatial Spillovers of Fine Particulate Matter Due to Wind Direction. Geographical Analysis 52(2) <a href="https://doi.org/10.1111/gean.12205">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, <strong>Otto, P.</strong> (2020): Impact of academic authorship characteristics on article citations. REVSTAT (online first) <a href="https://www.ine.pt/revstat/pdf/Impactofacademicauthorshipcharacteristicsonarticlecitations.pdf">(DOI)</a></li>
                                             <li> Garthoff, R., <strong>Otto, P.</strong> (2020): Spatiotemporal procedures for the statistical surveillance of spatial autoregressive models with heavy tails. Communications in Statistics - Simulation and Computation (online first) </li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        2019
+                                    </p>
+                                    <p>
+                                        <ul>
                                             <li> <strong>Otto, P.</strong> (2019): spGARCH: An R-Package for Spatial ARCH and GARCH Models. The R Journal 11(2) <a href="https://doi.org/10.32614/RJ-2019-053">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        2018
+                                    </p>
+                                    <p>
+                                        <ul>
                                             <li> <strong>Otto, P.</strong>, Schmid, W., Garthoff, R. (2018): Generalised Spatial and Spatiotemporal Autoregressive Conditional Heteroscedasticity. Spatial Statistics 26 <a href="https://doi.org/10.1016/j.spasta.2018.07.005">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Schmid, W. (2018): Spatiotemporal Analysis of German Real Estate Prices. The Annals of Regional Science  60(1) <a href="https://doi.org/10.1007/s00168-016-0789-y">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Schmid, W. (2018): Discussion of "Statistical methods for network surveillance" by Daniel Jeske, Nathaniel Stevens, Alexander Tartakovsky, and James Wilson. Applied Stochastic Models in Business and Industry 34(4) <a href="https://doi.org/10.1002/asmb.2360">(DOI)</a></li>
                                             <li> Garthoff, R., <strong>Otto, P.</strong> (2018): Verfahren zur Überwachung räumlicher autoregressiver Prozesse mit externen Regressoren. AStA Wirtschafts- und Sozialstatistisches Archiv <a href="https://doi.org/10.1007/s11943-018-0224-1">(DOI)</a></li>
                                             <li> Garthoff, R., <strong>Otto, P.</strong> (2018): Control charts for multivariate spatial autoregressive models. AStA - Advances in Statistical Analysis 101(1) <a href="https://doi.org/10.1007/s10182-016-0276-x">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        2017
+                                    </p>
+                                    <p>
+                                        <ul>
                                             <li> <strong>Otto, P.</strong> (2017): A Note on Efficient Simulation of Multidimensional Spatial Autoregressive Processes. Communications in Statistics - Simulation and Computation 46(6) <a href="https://doi.org/10.1080/03610918.2015.1122050">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        2016
+                                    </p>
+                                    <p>
+                                        <ul>
                                             <li> <strong>Otto, P.</strong>, Schmid, W. (2016): Detection of Spatial Change Points in the Mean and Covariances of Multivariate Simultaneous Autoregressive Models. Biometrical Journal 58(5) <a href="https://doi.org/10.1002/bimj.201500148">(DOI)</a></li>
                                             <li> Lange, A.-L., <strong>Otto, P.</strong> (2016): Bayes'sche Statistik in der Dienstleistungsforschung. AStA Wirtschafts- und Sozialstatistisches Archiv 10(4) <a href="https://doi.org/10.1007/s11943-016-0189-x">(DOI)</a></li>
                                         </ul>
@@ -155,15 +208,15 @@
 							<div class="col-4 col-12-mobile" id="sidebar">
 								<hr class="first" />
 								<section>
-									<header>
-										<h3><a href="#">Research interests</a></h3>
-									</header>
-									<p>
-										I am interested in statistical data science and statistical methodology for data in multidimensional spaces, e.g., geo-referenced data. Most of my papers have one theory in common - Tobler's first law of geography: "everything is related to everything else, but near things are more related than distant things."
-									</p>
+                                    <header>
+                                        <h3><a href="#">Research interests</a></h3>
+                                    </header>
+                                    <p>
+                                        I am interested in statistical data science and statistical methodology for data in multidimensional spaces, e.g., geo-referenced data. Most of my papers have one theory in common - Tobler's first law of geography: "everything is related to everything else, but near things are more related than distant things."
+                                    </p>
                                     <div class="row gtr-50">
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/ststat.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Spatiotemporal statistics</h4>
@@ -172,7 +225,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/statlearn.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Statistical learning</h4>
@@ -181,7 +234,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/env.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Environmetrics</h4>
@@ -190,7 +243,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/spc.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Statistical process control</h4>
@@ -199,7 +252,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/network.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Network modelling</h4>
@@ -475,6 +528,7 @@
                                             <ul class="icons">
                                                 <li><a href="https://www.researchgate.net/profile/Philipp-Otto-2" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
                                                 <li><a href="https://www.instagram.com/stats.o.phil.e/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                                <li><a href="https://www.linkedin.com/in/philipp-otto-0a9887264/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
                                                 <li><a href="https://www.xing.com/profile/Philipp_Otto8/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
                                                 <li><a href="https://twitter.com/PhilOt5" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                             </ul>
