--- a/teaching.html
+++ b/teaching.html
@@ -191,35 +191,35 @@
 									</p>
 									<div class="row gtr-50">
 										<div class="col-4">
-											<a href="https://www.fbg.uni-hannover.de/en/studies/courses-at-the-faculty/geodesy-and-geoinformatics/" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+											<a href="https://www.fbg.uni-hannover.de/en/studies/courses-at-the-faculty/geodesy-and-geoinformatics/" class="image fit"><img src="images/gug.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4>Geodesy and Geoinformatics</h4>
                                             <p>Master of Science, Leibniz University Hannover</p>
 										</div>
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/econ.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4>Economics</h4>
                                             <p>Bachelor of Science, University of Göttingen</p>
 										</div>
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/iba.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4>International Business Administration</h4>
                                             <p>Bachelor of Science, European University Viadrina</p>
 										</div>
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/compeng.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4>Computational Methods in Engineering</h4>
                                             <p>Master of Science, Leibniz University Hannover</p>
 										</div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/datascience.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Applied Data Science</h4>
@@ -351,6 +351,7 @@
                                             <ul class="icons">
                                                 <li><a href="#" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
                                                 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                                <li><a href="https://www.linkedin.com/in/philipp-otto-0a9887264/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
                                                 <li><a href="#" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
                                                 <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                             </ul>
