--- a/presentations.html
+++ b/presentations.html
@@ -87,6 +87,7 @@
                                     <h3>Organised sessions and workshops</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2023:</strong> Scientific program committee member of IMS International Conference on Statistics and Data Science and CMStatistics London</li>
                                             <li> <strong>2022:</strong> Scientific program committee member and session on “Spatial data science”, CMStatistics London; Session on “Spatial and spatiotemporal statistics”, DAGStat Hamburg (invited talk by Matthias Katzfuß)</li>
                                             <li> <strong>2021:</strong> Session on “Spatial data science”, CMStatistics London (invited talk by Osman Dogan)</li>
                                             <li> <strong>2020:</strong> Virtual Plenary Session, Statistical Week (keynote speaker: Jorge Mateu)</li>
@@ -134,15 +135,15 @@
 							<div class="col-4 col-12-mobile" id="sidebar">
 								<hr class="first" />
 								<section>
-									<header>
-										<h3><a href="#">Research interests</a></h3>
-									</header>
-									<p>
-										I am interested in statistical data science and statistical methodology for data in multidimensional spaces, e.g., geo-referenced data. Most of my papers have one theory in common - Tobler's first law of geography: "everything is related to everything else, but near things are more related than distant things."
-									</p>
+                                    <header>
+                                        <h3><a href="#">Research interests</a></h3>
+                                    </header>
+                                    <p>
+                                        I am interested in statistical data science and statistical methodology for data in multidimensional spaces, e.g., geo-referenced data. Most of my papers have one theory in common - Tobler's first law of geography: "everything is related to everything else, but near things are more related than distant things."
+                                    </p>
                                     <div class="row gtr-50">
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/ststat.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Spatiotemporal statistics</h4>
@@ -151,7 +152,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/statlearn.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Statistical learning</h4>
@@ -160,7 +161,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/env.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Environmetrics</h4>
@@ -169,7 +170,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/spc.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Statistical process control</h4>
@@ -178,7 +179,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/network.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Network modelling</h4>
@@ -454,6 +455,7 @@
                                             <ul class="icons">
                                                 <li><a href="https://www.researchgate.net/profile/Philipp-Otto-2" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
                                                 <li><a href="https://www.instagram.com/stats.o.phil.e/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                                <li><a href="https://www.linkedin.com/in/philipp-otto-0a9887264/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
                                                 <li><a href="https://www.xing.com/profile/Philipp_Otto8/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
                                                 <li><a href="https://twitter.com/PhilOt5" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                             </ul>
