--- a/spARCH.html
+++ b/spARCH.html
@@ -87,15 +87,15 @@
 							<div class="col-4 col-12-mobile" id="sidebar">
 								<hr class="first" />
 								<section>
-									<header>
-										<h3><a href="#">Research interests</a></h3>
-									</header>
-									<p>
-										I am interested in statistical data science and statistical methodology for data in multidimensional spaces, e.g., geo-referenced data. Most of my papers have one theory in common - Tobler's first law of geography: "everything is related to everything else, but near things are more related than distant things."
-									</p>
+                                    <header>
+                                        <h3><a href="#">Research interests</a></h3>
+                                    </header>
+                                    <p>
+                                        I am interested in statistical data science and statistical methodology for data in multidimensional spaces, e.g., geo-referenced data. Most of my papers have one theory in common - Tobler's first law of geography: "everything is related to everything else, but near things are more related than distant things."
+                                    </p>
                                     <div class="row gtr-50">
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/ststat.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Spatiotemporal statistics</h4>
@@ -104,7 +104,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/statlearn.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Statistical learning</h4>
@@ -113,7 +113,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/env.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Environmetrics</h4>
@@ -122,7 +122,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/spc.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Statistical process control</h4>
@@ -131,7 +131,7 @@
                                             </p>
                                         </div>
                                         <div class="col-4">
-                                            <a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="images/network.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Network modelling</h4>
@@ -318,6 +318,7 @@
                                             <ul class="icons">
                                                 <li><a href="https://www.researchgate.net/profile/Philipp-Otto-2" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
                                                 <li><a href="https://www.instagram.com/stats.o.phil.e/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                                <li><a href="https://www.linkedin.com/in/philipp-otto-0a9887264/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
                                                 <li><a href="https://www.xing.com/profile/Philipp_Otto8/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
                                                 <li><a href="https://twitter.com/PhilOt5" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                             </ul>
