--- a/research.html
+++ b/research.html
@@ -93,8 +93,8 @@
                                     </p>
                                     <p>
                                         <ul>
+                                            <li> Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2023): Agrimonia: a dataset on livestock, meteorology and air quality in the Lombardy region, Italy. nature Scientific Data<a href="https://doi.org/10.1038/s41597-023-02034-0"> (DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Otto, P. (2023): What's in a name? Significance 20(1)<a href="https://doi.org/10.1093/jrssig/qmad010"> (DOI)</a></li>
-                                            <li> Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2023): Agrimonia: a dataset on livestock, meteorology and air quality in the Lombardy region, Italy. accepted: nature Scientific Data</li>
                                             <li> Harke, F. H., <strong>Otto, P.</strong> (2023): Solar Self-Sufficient Households as a Driving Factor for Sustainability Transformation. Sustainability 15(3)<a href="https://doi.org/10.3390/su15032734"> (DOI)</a></li>
                                         </ul>
                                     </p>
