scival link added

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							I am currently an assistant professor of <a href="https://www.ikg.uni-hannover.de/en/institute/search-for-persons/otto/">Big Geospatial Data</a> at the Leibniz University Hannover (<a href="https://www.ikg.uni-hannover.de/en/">Institute of Cartography and Geoinformatics</a>). For one year, in 2020-2021, I was the interim professor of Spatial Data Analysis and Statistical Learning at the University of Göttingen. Before that, I led the junior research group <a href="projects.html">Detection and Surveillance of Spatial and Spatiotemporal Clusters</a> at the Viadrina Center B/ORDERS IN MOTION at the European University in Frankfurt (Oder), where I also did my Ph.D. in statistics in 2016.
 						</p>
                         <p>
-                        In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked 23rd worldwide on Scopus and 1st among German researchers (rated as top 8% scientists with their first publication in 2016 on ResearchGate, across all disciplines).
+                        In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/10087">22nd worldwide on Scopus</a> and 1st among German researchers (rated as top 8% scientists with their first publication in 2016 on ResearchGate, across all disciplines).
                         </p>
 						<footer>
 							<a href="cv.html" class="button">Continue to my CV</a>
