--- a/presentations.html
+++ b/presentations.html
@@ -118,6 +118,7 @@
                                     <h3>Conferences (since 2016):</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2023:</strong> German Probability and Stochastic Days, Essen</li>
                                             <li> <strong>2022:</strong> World Spatial Econometrics Conference, Warsaw; metma-X, Lleida; Statistical Week Münster; CMStatistics London</li>
                                             <li> <strong>2021:</strong> Statistical Week Kiel</li>
                                             <li> <strong>2019:</strong> DAGStat 2019 Munich; Stochastic Models, Statistics and Applications Dresden; Annual Meeting of the Italian Statistical Society, Catholic University Milan; CODE UniBW Munich; ESREL Hannover; 17th Workshop on Quality Improvement Methods Dortmund; CMStatistics London</li>
