--- a/research.html
+++ b/research.html
@@ -190,6 +190,12 @@
                                            
                                         </ul>
                                     </p>
+                                    <h3>Open Data</h3>
+                                    <p>
+                                        <ul>
+                                            <li>Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2022): AgrImOnIA: Open Access dataset correlating livestock and air quality in the Lombardy region, Italy. Zenodo <a href="https://doi.org/10.5281/zenodo.7593803">(DOI)</a></li>
+                                        </ul>
+                                    </p>
                                     <h3>Textbooks</h3>
                                     <p>
                                         <ul>
