--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
 						</article>
                         
                         <article>
+                            <a href="agrimonia.html" class="image featured"><img src="images/pic05_agrimonia.jpg" alt="" /></a>
+                            <header>
+                                <h3><a href="agrimonia.html">Agrimonia Dataset (nature Scientific Data)</a></h3>
+                            </header>
+                            <p>Dataset published: daily air quality, weather, and agricultural/livestock activity data for Lombardy, Italy to aid air quality research.</p>
+                            <p>Research Interest Score is higher than 94% of all articles published in 2023 (Researchgate)</p>
+                        </article>
+                        
+                        <article>
                             <a href="RJ.html" class="image featured"><img src="images/pic02_n.jpg" alt="" /></a>
                             <header>
                                 <h3><a href="RJ.html">spGARCH: An R-Package for spatial GARCH Models (RJ)</a></h3>
@@ -187,10 +196,23 @@
 							<p>Below I update from time to time some news from my research, my externally funded projects and teaching.</p>
 						</header>
 						<div class="row">
+                            <article class="col-4 col-12-mobile special">
+                                <a href="agrimonia.html" class="image featured"><img src="images/pic05_agrimonia.jpg" alt="" /></a>
+                                <header>
+                                    <h3><a href="agrimonia.html">We published the AgrImOnIA dataset (nature Scientific Data)</a></h3>
+                                </header>
+                                <p>
+                                Discover the new harmonized dataset that aims to quantify the impact of the agricultural and livestock sectors on the air quality in Lombardy, Italy. Available on Zenodo <a href="https://doi.org/10.5281/zenodo.7593803">(DOI)</a>
+                                </p>
+                                <p>
+                                    The accompanying paper is availabe open-access in nature Scientific Data <a href="https://doi.org/10.1038/s41597-023-02034-0">(DOI)</a>
+                                </p>
+                            </article>
+                            <!--
 							<article class="col-4 col-12-mobile special">
 								<a href="bikes.html" class="image featured"><img src="images/pic05_nn.jpg" alt="" /></a>
 								<header>
-									<h3><a href="bikes.html">"The Helsinki Bike-Sharing System" got accepted (Journal of the Royal Statistical Society Series A)</a></h3>
+									<h3><a href="bikes.html">"The Helsinki Bike-Sharing System" (Journal of the Royal Statistical Society Series A)</a></h3>
 								</header>
 								<p>
                                     Do you prefer cycling uphill or downhill in the rain? Or not at all? The paper deals with the functional statistical analysis of the usage of the bike-sharing service in Helsinki. It fully accounts for temporal, spatial and spatiotemporal interactions.
@@ -199,13 +221,14 @@
                                     The paper is availabe open-access in the Journal of the Royal Statistical Society Series A <a href="https://doi.org/10.1111/rssa.12834">(DOI)</a>
                                 </p>
 							</article>
+                            -->
 							<article class="col-4 col-12-mobile special">
 								<a href="projects.html" class="image featured"><img src="images/pic08_n.jpg" alt="" /></a>
 								<header>
 									<h3><a href="projects.html">New funding - Call for applications</a></h3>
 								</header>
 								<p>
-                                    I am looking for new research assistants (PhD students) for the project "Time series analysis of historical maps". The project deals with statistical modelling of geo-referenced time series from historical maps, mainly generalised additive models.
+                                    I am looking for new research assistants (PhD students) for the project "Time series analysis of historical maps." The project deals with statistical modelling of geo-referenced time series from historical maps, mainly generalised additive models.
 								</p>
                                 <p>
                                     If you are interested, please feel free to contact me by email (attaching your current CV and references, such as papers, theses, etc., if available).
