--- a/presentations.html
+++ b/presentations.html
@@ -87,7 +87,7 @@
                                     <h3>Organised sessions and workshops</h3>
                                     <p>
                                         <ul>
-                                            <li> <strong>2023:</strong> Scientific program committee member of IMS International Conference on Statistics and Data Science and CMStatistics London</li>
+                                            <li> <strong>2023:</strong> Scientific program committee member of IMS International Conference on Statistics and Data Science and CMStatistics London, Session on "Spatiotemporal Data Analytics" Statistical Week Dortmund (together with Carsten Jentsch; keynote talk by Sudipto Banerjee)</li>
                                             <li> <strong>2022:</strong> Scientific program committee member and session on “Spatial data science”, CMStatistics London; Session on “Spatial and spatiotemporal statistics”, DAGStat Hamburg (invited talk by Matthias Katzfuß)</li>
                                             <li> <strong>2021:</strong> Session on “Spatial data science”, CMStatistics London (invited talk by Osman Dogan)</li>
                                             <li> <strong>2020:</strong> Virtual Plenary Session, Statistical Week (keynote speaker: Jorge Mateu)</li>
@@ -96,10 +96,16 @@
                                             <li> <strong>2015:</strong> Viadrina Days of Empirical Economics</li>
                                         </ul>
                                     </p>
+                                    <h3>Invited presentations at conferences (except CMStatistics)</h3>
+                                    <p>
+                                        <ul>
+                                            <li> <strong>2023:</strong> 35th Panhellenic and 1st International Statistics Conference, Athens</li>
+                                        </ul>
+                                    </p>
                                     <h3>Invited presentations at research seminars and workshops</h3>
                                     <p>
                                         <ul>
-                                            <li> <strong>2023:</strong> Fondazione Eni Enrico Mattei, University of Milan-Bicocca</li>
+                                            <li> <strong>2023:</strong> Fondazione Eni Enrico Mattei, University of Milan-Bicocca, Helmut Schmidt University Hamburg</li>
                                             <li> <strong>2022:</strong> Geoinformatics Forum University of Münster, European University Viadrina Frankfurt (Oder), International Research Training Group Hannover/Paris, </li>
                                             <li> <strong>2021:</strong> University of Milan</li>
                                             <li> <strong>2020:</strong> University of Bergamo, University of Augsburg</li>
@@ -110,6 +116,7 @@
                                     <h3>Specialised workshops:</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2023:</strong> XIVth International Workshop on Intelligent Statistical Quality Control, Washington </li>
                                             <li> <strong>2019:</strong> XIIIth International Workshop on Intelligent Statistical Quality Control, Hongkong </li>
                                             <li> <strong>2016:</strong> XIIth International Workshop Intelligent Statistical Quality Control, Hamburg </li>
                                         </ul>
