--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/10087">22nd worldwide on Scopus</a> and 1st among German researchers (rated as top 7% scientists with their first publication in 2016 on ResearchGate, across all disciplines).
                         </p>
                         <p>
-                        I am honoured to be a part of Carl Friedrich Gauss's <a href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=18231">academic lineage</a> in the 9th generation, joining the group of 113,184 individuals who have followed in his scholarly footsteps. You can find my full academic genealogy <a href="otto.pdf">here</a> (<a href="https://www.genealogy.math.ndsu.nodak.edu/index.php">The Mathematics Genealogy Project</a>).
+                        I am honoured to be a part of Carl Friedrich Gauss's <a href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=18231">academic lineage</a> in the 9th generation, joining the group of 113,184 individuals who have followed in his scholarly footsteps  (<a href="https://www.genealogy.math.ndsu.nodak.edu/index.php">The Mathematics Genealogy Project</a>). You can find my full academic genealogy <a href="otto.pdf">here</a>.
                         </p>
 						<footer>
 							<a href="cv.html" class="button">Continue to my CV</a>
