--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,7 @@
                                     Passionate statistician and professor of big geospatial data with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 7% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (6 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                     <p>
-                                    In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked 22nd worldwide on Scopus and 1st among German researchers.
+                                    In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/10087">18th worldwide on Scopus</a> and 1st among German researchers. In the area of topic T.7921, "Covariance Function; Spatio-Temporal; Variogram," which constitutes my second-largest research focus, I have achieved a <a href="https://www.scival.com/trends/authors/table?uri=Topic/7921">global ranking of 76th</a>, which also places me in the 1st place among German researchers.
                                     </p>
                                 </article>
                                 <article class="col-3 col-12-mobile special">
