--- a/research.html
+++ b/research.html
@@ -173,6 +173,7 @@
                                     <h3>Peer-reviewed book chapters and conference proceedings</h3>
                                     <p>
                                         <ul>
+                                            <li> Maranzano, P., McConville, K., <strong>Otto, P.</strong>, Carillo, F. (2023): A geostatistical investigation of the ammonia-livestock relationship in the Po Valley, Italy. Annual Meeting of the Italian Statistical Society 2023</li>
                                             <li> <strong>Otto, P.</strong> (2021): Parallelized Monitoring of Dependent Spatiotemporal Processes. In: Knoth S., Schmid W. (eds) Frontiers in Statistical Quality Control 13. ISQC 2019. Frontiers in Statistical Quality Control. Springer, Cham <a href="https://doi.org/10.1007/978-3-030-67856-2_10">(DOI)</a></li>
                                             <li> Malinovskaya A., <strong>Otto, P.</strong>,  Peters, T. (2021): Statistical learning for change point and anomaly detection in graphs. arXiv:2011.06080 (accepted: Springer Handbook on Artificial Intelligence, Big Data, Data Science and Machine Learning in Statistics) </li>
                                             <li> <strong>Otto, P.</strong> (2019): Modeling Spatial Dependence in Local Risks and Uncertainties. Proceedings of the
