--- a/research.html
+++ b/research.html
@@ -93,6 +93,8 @@
                                     </p>
                                     <p>
                                         <ul>
+                                            <li> Fülle, M., <strong>Otto, P.</strong> (2023): Spatial GARCH Models for Unknown Spatial Locations – An Application to Financial Stock Returns. Spatial Economic Analysis (accepted)</li>
+                                            <li> <strong>Otto, P.</strong>, Steinert, R. (2023): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics, 32:2, 696-711 <a href="https://doi.org/10.1080/10618600.2022.2107530"> (DOI)</a></li>
                                             <li> Maranzano, P., <strong>Otto, P.</strong>, Fassò, A. (2023): Adaptive LASSO estimation for functional hidden dynamic geostatistical models. Stochastic Environmental Research and Risk Assessment <a href="https://doi.org/10.1007/s00477-023-02466-5">(DOI)</a></li>
                                             <li> Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2023): Agrimonia: a dataset on livestock, meteorology and air quality in the Lombardy region, Italy. nature Scientific Data 10(143) <a href="https://doi.org/10.1038/s41597-023-02034-0">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Otto, P. (2023): What's in a name? Significance 20(1) <a href="https://doi.org/10.1093/jrssig/qmad010">(DOI)</a></li>
@@ -105,7 +107,6 @@
                                     <p>
                                         <ul>
                                             <li> <strong>Otto, P.</strong>, Schmid, W. (2022): A general framework for spatial GARCH models. Statistical Papers<a href="https://doi.org/10.1007/s00362-022-01357-1"> (DOI)</a></li>
-                                            <li> <strong>Otto, P.</strong>, Steinert, R. (2022): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics<a href="https://doi.org/10.1080/10618600.2022.2107530"> (DOI)</a></li>
                                             <li> Harke, F. H., Merk, M., <strong>Otto, P.</strong> (2022): Estimation of Asymmetric Spatial Autoregressive Dependence on Irregular Lattices. Symmetry 14(7)<a href="https://doi.org/10.3390/sym14071474"> (DOI)</a></li>
                                             <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a></li>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2022): Estimation of the spatial weighting matrix for regular lattice data -- An adaptive lasso approach with cross-sectional resampling. Environmetrics 33(1) <a href="https://doi.org/10.1002/env.2705">(DOI)</a></li>
