--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
                                     </p>
                                     <p>
                                         <ul>
-                                            <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2023): Statistical process monitoring of artificial neural networks. Technometrics <a href="https://doi.org/...">(accepted, DOI)</a></li>
+                                            <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2023): Statistical process monitoring of artificial neural networks. Technometrics <a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li> Fülle, M., <strong>Otto, P.</strong> (2023): Spatial GARCH Models for Unknown Spatial Locations – An Application to Financial Stock Returns. Spatial Economic Analysis <a href="https://doi.org/10.1080/17421772.2023.2237067">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Steinert, R. (2023): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics, 32:2, 696-711 <a href="https://doi.org/10.1080/10618600.2022.2107530">(DOI)</a></li>
                                             <li> Maranzano, P., <strong>Otto, P.</strong>, Fassò, A. (2023): Adaptive LASSO estimation for functional hidden dynamic geostatistical models. Stochastic Environmental Research and Risk Assessment <a href="https://doi.org/10.1007/s00477-023-02466-5">(DOI)</a></li>
