--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
                                 <dl>
                                   <dt><b>Since 01/09/2018:</b></dt>
                                   <dd>Assistant professor of Big Geospatial Data, Institute for Cartography and Geoinformatics of the Faculty of Civil Engineering and Geodesy, Leibniz University Hannover</dd>
-                                  <dd>My group currently consists of 6 PhD students: Anna Malinovskaya, Franz H. Harke, Qendrim Shaboviq, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto</dd>
+                                  <dd>My group currently consists of 6 PhD students: Anna Malinovskaya, Franz H. Harke, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto, Mireille Fangueng</dd>
                                   <dt><b>01/04/2020 - 31/03/2021:</b></dt>
                                   <dd>Visiting/interim professor of Spatial Data Analysis and Statistical Learning (full professor), Faculty of Economics, University of Göttingen</dd>
                                   <dt><b>01/01/2017 - 31/08/2018:</b></dt>
