--- a/cv.html
+++ b/cv.html
@@ -73,7 +73,7 @@
                             <div class="row">
                                 <article class="col-8 col-12-mobile special">
                                     <p>
-                                    Passionate statistician and professor of big geospatial data with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 7% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (6 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
+                                    Reader in Statistics and Data Analytics and passionate statistician with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 7% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (6 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                     <p>
                                     In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/10087">18th worldwide on Scopus</a> and 1st among German researchers. In the area of topic T.7921, "Covariance Function; Spatio-Temporal; Variogram," which constitutes my second-largest research focus, I have achieved a <a href="https://www.scival.com/trends/authors/table?uri=Topic/7921">global ranking of 76th</a>, which also places me in the 1st place among German researchers.
@@ -87,8 +87,10 @@
                             <h3>Scientific career</h3>
 							<p>
                                 <dl>
-                                  <dt><b>Since 01/09/2018:</b></dt>
-                                  <dd>Assistant professor of Big Geospatial Data, Institute for Cartography and Geoinformatics of the Faculty of Civil Engineering and Geodesy, Leibniz University Hannover</dd>
+                                <dt><b>Since 01/09/2023:</b></dt>
+                                    <dd>Reader in Statistics and Data Analytics, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
+                                  <dt><b>01/09/2018 - 31/08/2023:</b></dt>
+                                  <dd>Assistant professor of Big Geospatial Data, Institute for Cartography and Geoinformatics of the Faculty of Civil Engineering and Geodesy, Leibniz University Hannover, Germany</dd>
                                   <dd>My group currently consists of 6 PhD students: Anna Malinovskaya, Franz H. Harke, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto, Mireille Fangueng</dd>
                                   <dt><b>01/04/2020 - 31/03/2021:</b></dt>
                                   <dd>Visiting/interim professor of Spatial Data Analysis and Statistical Learning (full professor), Faculty of Economics, University of Göttingen</dd>
